# python3-property_tree

./: .gitignore  README.md  example.py  property_tree.cpp  pyproject.toml  setup.py  test.py
examples/: example.py
proptree/: proptree.cpp
test/: module_test.py
